# PDFCore

./: .gitignore  Cargo.toml  README.md  ai-pdf-writer.win32-x64-msvc.node  fetch_font.js  gen_dummy_image.js  index.d.ts  index.html  index.js  package-lock.json  package.json  spec.md  test.js
client/cli/: clean.pdfCoret  data.json  data.ndjson  package-lock.json  package.json  test_pack.pdfCoret
client/cli/src/: index.ts
client/editor/: index.html  package-lock.json  package.json  vite.config.ts
client/editor/src/: App.css  App.tsx  index.css
client/editor/src/components/: Editor.tsx  PreviewModal.tsx  PropertyInspector.tsx  Toolbar.tsx
client/editor/src/editor/: componentTypes.ts  converter.ts  pdfBlocks.ts  pdfTemplates.ts  templateIO.ts  types.ts
client/examples/: simple.js  template (3).pdfCoret
client/sdk/: package-lock.json  package.json
client/sdk/src/: client.ts  index.ts
examples/: build_test_pdfCoret.py  comprehensive_test.json  comprehensive_test.pdfCoret  render_comprehensive.rs  table_spans.rs  verify_editor_json.rs
examples/invoice/: data.json  invoice.pdfCoret  invoice_template.pdfCoret  invoice_template_fixed.pdfCoret  invoice_template_fixed_v2.pdfCoret  run.js
examples/invoice/pkg/: layout.json
src/: lib.rs  napi.rs  wasm.rs
src/core/: color.rs  document.rs  font.rs  glyph_cache.rs  image.rs  layout.rs  mod.rs  page.rs  table.rs  template.rs  text.rs  writer.rs
