[package]
name = "ai_pdf_writer"
version = "1.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ttf-parser = "0.25"
owned_ttf_parser = "0.25"
rustybuzz = "0.20"
subsetter = "0.1"
image = { version = "0.24", default-features = false, features = ["jpeg", "png"] }
flate2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = { version = "0.1", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
napi = "2.12"
napi-derive = "2.12"

[build-dependencies]
napi-build = "2.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
